--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
 	"pages": [
 		"pages/index/index",
-		"pages/take/takeDel",
-		"pages/dealers/dealers",
-		"pages/takeHome/takeHome"
+		"pages/take/dealers/dealers",
+		"pages/take/takeDel/takeDel",
+		"pages/take/takeHome/takeHome"
 	],
 	"window": {
 		"navigationBarTitleText": "企业微信",
@@ -11,7 +11,7 @@
 		"navigationBarTextStyle": "black",
 		"enablePullDownRefresh": false
 	},
-	"navigateToMiniProgramAppIdList": [
+	"navigateToMiniProgramAppIdList":[
 		"wx5f891ae8337b8324",
 		"wx9db2c16d0633c2e7"
 	],
@@ -28,6 +28,10 @@
 		"wxPano": {
 			"version": "1.4.4",
 			"provider": "wx386c038238531f87"
+		},
+		"contactPlugin": {
+			"version": "1.3.0",
+			"provider": "wx104a1a20c3f81ec2"
 		}
 	},
 	"permission": {
